Issue #3499554 by wim leers, larowlan, longwave: Move client-side assumptions about prop form data shape into a series of prop-specific transforms
